# freeze-poetry

./: README.md  pyproject.toml
freeze_poetry/: __main__.py  dependency.py  main.py  package.py
freeze_poetry/management/: __init__.py
tests/: test_freeze_poetry.py
